# BestDuo_AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: clients.py  config.py  main.py
scripts/: entrypoint.sh
tests/: test_health.py
